--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,18 +8,12 @@
     android:background="@color/colorBachground"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/programTitleTV"
-        android:layout_width="wrap_content"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbarMain"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colortextViewBackground"
-        android:text="@string/text_program_title_calculator"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayoutInputOperand"
-        android:layout_marginTop="30dp"/>
+        android:background="@color/colorToolbar"
+        tools:ignore="MissingConstraints"/>
 
     <LinearLayout
         android:id="@+id/linearLayoutInputOperand"
@@ -30,8 +24,8 @@
         android:layout_marginRight="8pt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/programTitleTV"
-        android:layout_marginTop="30dp">
+        app:layout_constraintTop_toBottomOf="@+id/toolbarMain"
+        android:layout_marginTop="60dp">
 
         <EditText
             android:id="@+id/firstOperandET"
@@ -64,20 +58,22 @@
         android:layout_marginTop="30dp">
 
         <Button
-            android:id="@+id/sumBTN"
+            android:id="@+id/buttonSumBTN"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/sum"
-            android:textSize="22sp" />
+            android:textSize="22sp"
+            android:backgroundTint="@color/colorButton"/>
 
         <Button
-            android:id="@+id/diffBTN"
+            android:id="@+id/buttonDiffBTN"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/diff"
-            android:textSize="22sp" />
+            android:textSize="22sp"
+            android:backgroundTint="@color/colorButton"/>
 
     </LinearLayout>
     
@@ -89,13 +85,13 @@
         android:background="@color/colortextViewBackground"
         android:text="@string/result"
         android:textSize="30sp"
+        android:textColor="@color/black"
         android:layout_marginLeft="8pt"
         android:layout_marginRight="8pt"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayoutChoiceOperator"
         android:layout_marginTop="30dp"/>
-
     
 
 </androidx.constraintlayout.widget.ConstraintLayout>
